<resources>
    <string name="app_name">Pdf Scanner</string>
    <string name="file_provider">%s.my.package.name.provider</string>
    <string name="open_file">Open File</string>
    <string name="close">Close</string>
    <string name="accept">Accept</string>
    <string name="not_have_permission">You don\'t have permission, give the application permissions so you can experience the application</string>
    <string name="warning">Warning</string>
    <string name="remove_file">Remove File</string>
    <string name="wait_delete_file">Are you sure you want to delete this file?</string>
    <string name="delete">Delete</string>
    <string name="wait_me_a_min">Please wait a moment …</string>
    <string name="todo">TODO</string>
    <string name="select_image">Select Image</string>
    <string name="null_image">Current devices do not have images</string>
    <string name="count_selected">%d Selected</string>
    <string name="slide_show">Slide Show</string>
    <string name="enter_name">Enter name</string>
    <string name="strOk">Ok</string>
    <string name="strCancel">Cancel</string>
    <string name="empty_name">Name must not empty</string>
    <string name="null_album">No data</string>
    <string name="album">Album</string>
    <string name="convert">Convert</string>
    <string name="format_timestamp">MP3_%s_</string>
    <string name="format_image">IMAGE_%s_</string>
    <string name="my_videos">My Videos</string>
    <string name="more_apps">More Apps</string>
    <string name="feedback">Feedback</string>
    <string name="check_update">Check fot update</string>
    <string name="remove_ads">Remove ads</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="rate">Rate Us</string>
    <string name="all_photos">All Photos</string>
    <string name="count_selected_">[%d/%d]</string>
    <string name="count_music">[%d/10]</string>
    <string name="share_more">Share videos directly to Facebook, Twitter, Instagram, Messenger and other social media networks</string>
    <string name="share_with_friends">Share App</string>
    <string name="rate_stars">Rate us 5 stars</string>
    <string name="privacy">Policy</string>
    <string name="select_photos">Select Photos</string>
    <string name="need_pick_image">Your photo list shows here</string>
    <string name="zero_on_total">[0/100]</string>
    <string name="zero_on_total_music">[0/10]</string>
    <string name="photo_list">Photos List</string>
    <string name="transition">Transition</string>
    <string name="add">Add</string>
    <string name="add_music">Add Music</string>
    <string name="timer">Timer</string>
    <string name="face_book">Facebook</string>
    <string name="pls_install_app_first">No application installed for sharing.</string>
    <string name="arrange_photos">Arrange Photos</string>
    <string name="convert_success">You\'re successfully! Video saved to path: %s</string>
    <string name="convert_fail">Record video failed: %s</string>
    <string name="error">Error!</string>
    <string name="speed_per_pic">Time: %1$ds/pic</string>
    <string name="speed_per_pic_total">Time: %1$ds/pic Total: %1$ds</string>
    <string name="text_zero">0s</string>
    <string name="text_ten">10s</string>
    <string name="file_name">File name</string>
    <string name="video_name">Video name</string>
    <string name="file_folder">%s/%s%s</string>
    <string name="file_folder_">%s/%s</string>
    <string name="equal_name">This name already exists. Please enter another name</string>
    <string name="filter">Filter</string>
    <string name="time_">00:00</string>
    <string name="edit_image">Edit Image</string>
    <string name="double_tab">Please click Back again to exit</string>
    <string name="wait_to_preview">Please wait a bit for video player to load data</string>
    <string name="type_something">Type Something</string>
    <string name="five_images">You need to choose at least 5 photos to continue</string>
    <string name="one_images">Choose from 1 to %d photos</string>
    <string name="crop">Crop &amp; Rotate</string>
    <string name="rotate">Rotate</string>
    <string name="text">Add Text</string>
    <string name="select_music">Select Music</string>
    <string name="select_local_music">Select Local Music</string>
    <string name="maximum_100">Select up to %d photos</string>
    <string name="long_press_drag">Long press and move to arrange photos</string>
    <string name="creating_video">Creating Video....</string>
    <string name="close_progress">Close the process</string>
    <string name="want_cant_process">Do you want to cancel the process ?</string>
    <string name="strYes">Yes</string>
    <string name="strNo">No</string>
    <string name="zero_percent">0%</string>
    <string name="hundred_percent">100%</string>
    <string name="mp4">.mp4</string>
    <string name="quality">Quality</string>
    <string name="quality_720">720p</string>
    <string name="quality_480">480p</string>
    <string name="quality_360">360p</string>
    <string name="video_information">Video Information</string>
    <string name="progress_creating_video">"Initializing, please wait…"</string>
    <string name="thanks">Thank You</string>
    <string name="see_you_again">See you, again</string>
    <string name="location">Location: %s</string>
    <string name="processing">Image Processing…</string>
    <string name="tap_here">Tap here to view this video</string>
    <string name="create_wait_video">Video creation process is running please wait for the process to finish</string>
    <string name="cancel_progress">Video processing has been canceled because the application stopped unexpectedly</string>
    <string name="try_again">You cannot exit at this time. Please try again later</string>
    <string name="brand_n_model">%s %s</string>
    <string name="not_enough_memory">The process was canceled because the device memory was not enough</string>
    <string name="add_frame">Add Frame</string>
    <string name="add_text">Add Text</string>
    <string name="add_sticker">Add Sticker</string>
    <string name="effect">Effect</string>
    <string name="add_text_to_video">Add Text To Video</string>
    <string name="count_selected_music">[%d/10]</string>
    <string name="text_size">Text Size:</string>
    <string name="color_font"><![CDATA[Color & Font:]]></string>
    <string name="text_25dp">%dpt</string>
    <string name="type_text">Type Text:</string>
    <string name="align">Text Alignment:</string>
    <string name="input_here">Enter the text here</string>
    <string name="choose_color">Select Color</string>
    <string name="send_">→</string>
    <string name="rename_fail">Can\'t rename file. Please try again.</string>
    <string name="select_size">Choose Size Text</string>
    <string name="select_font">Select Font</string>
    <string name="text_sample">Text Sample</string>
    <string name="transparency">Transparency</string>
    <string name="exist_name">Choice another name. File is existed.</string>
    <string name="text_left">Left text</string>
    <string name="text_right">Right text</string>
    <string name="text_center">Center text</string>
    <string name="cut_music">Cutting Music…</string>
    <string name="opacity">Opacity</string>
    <string name="null_data">No Data</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet">Connection Failed, Please Try Again Later</string>
    <string name="font_downloading">Font is downloading…</string>
    <string name="music_downloading">Music is downloading…</string>
    <string name="str_download">Download</string>
    <string name="only_one_song">You are only allowed to select one song</string>
    <string name="import_file">Import from files</string>
    <string name="add_music_success">You have successfully added this track</string>
    <string name="no_internet_choose_local">Music library couldn\'t load. Please check your connection and try again</string>
    <string name="create_video">Create Video</string>
    <string name="my_gallery">My Gallery</string>
    <string name="rename">Rename</string>
    <string name="end_point_">%s%s</string>
    <string name="tap_here_">Tap here to change folder</string>
    <string name="edit_video">Edit Video</string>
    <string name="rendering">Rending...</string>
    <string name="music">Music</string>
    <string name="duration">Duration</string>
    <string name="text_">Text</string>
    <string name="arrange_">Arrange</string>
    <string name="used">Used</string>
    <string name="edit_text">Edit text</string>
    <string name="time">Time</string>
    <string name="fonts">Fonts</string>
    <string name="colors">Color</string>
    <string name="share_save"><![CDATA[Save & Share]]></string>
    <string name="like_fb">Like facebook</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="butdown">INSTALL NOW</string>
    <string name="butexit">EXIT</string>
    <string name="ad_exit_rate_msg">Please give us 5 stars! Thank you!</string>
    <string name="ad_exit_rate_yes">Yes</string>
    <string name="ad_exit_rate_cancel">No, thanks</string>
    <string name="file">File</string>
    <string name="no_cut">No Cut</string>
    <string name="capture_again">Capture Again</string>
    <string name="left">Left</string>
    <string name="auto">Auto</string>
    <string name="recognition">Recognition</string>
    <string name="adjust">Adjust</string>
    <string name="recognition_again">Recognition Again</string>
    <string name="copy">Copy</string>
    <string name="export">Export</string>
    <string name="enter_content_file">Enter content file</string>
    <string name="image">Image</string>
    <string name="copy_successful">Copy successful</string>
    <string name="show_image">Show Image</string>
    <string name="hide_image">Hide Image</string>
    <string name="tool">Tool</string>
    <string name="signature">Signature</string>
    <string name="watermark">Watermark</string>
    <string name="clear">Clear</string>
    <string name="edit">Edit</string>
    <string name="content">Content</string>
    <string name="size">Size</string>
    <string name="alpha">Alpha</string>
    <string name="color">Color</string>
    <string name="scan_settings">Scan Settings</string>
    <string name="page_pdf_size">PDF page size</string>
    <string name="recognition_language">Recognition language (OCR)</string>
    <string name="default_storage_location">Default storage location</string>
    <string name="other">Other</string>
    <string name="size_page_pdf">PDF page size</string>
    <string name="pdf_settings">PDF Settings</string>
    <string name="orientation_page_pdf">PDF Page Orientation</string>
    <string name="add_page">Add pages</string>
    <string name="features">Features</string>
    <string name="pdf_preview">PDF Preview</string>
    <string name="email">Email</string>
    <string name="pdf_page_size">PDF page size</string>
    <string name="cm">cm</string>
    <string name="a3">A3</string>
    <string name="a4">A4</string>
    <string name="a5">A5</string>
    <string name="b4">B4</string>
    <string name="b5">B5</string>
    <string name="letter">Letter</string>
    <string name="legal">Legal</string>
    <string name="executive">Executive</string>
    <string name="business_card">Business Card</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
</resources>